[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "track" # This will be the command name in your terminal
version = "0.1.0"
authors = [
  { name="7Fil" },
]
description = "A simple CLI tool to manage your tasks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: None",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/7FIl/Track-CLI"

[project.scripts]
track = "track.cli:main" 

[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools.package-data]
"track" = ["Data.json"]